--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,12 @@
     color: red;
     font-weight: bold;
 }
+.top-section{
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem;
+    align-items: center;
+}
 .title{
     font-size: 1.5rem;
 }
@@ -126,6 +132,7 @@
 }
 li{
     list-style: none;
+    margin: .5rem;
 }
 .new-to-do-form{
     display: grid;
@@ -179,4 +186,39 @@ li{
     height: 20rem;
     width: 25rem;
     
+}
+
+.to-do-card{
+    margin-top: 2rem;
+    border: 2px solid gray;
+    border-radius: 5px;
+    width: fit-content;
+    height: fit-content;
+    padding: .5rem;
+    background-color:aliceblue;
+}
+.start-screen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+
+}
+.close-button{
+    border-radius: 15px;
+    background-color: coral;
+    padding: .5rem;
+    border: none;
+    font-size: 1.3;
+    height: fit-content;
+    width: fit-content;
+    
+}
+li:hover{
+    font-weight: bold;
+    cursor: pointer;
+}
+ul{
+    border-bottom: 1px solid gray;
 }
